# duckdb-roaring-msisdn-template

./: BITMAP_AGGREGATE_USAGE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
src/: bitmap_funcs.cpp  common.cpp  common.h  extension.cpp  msisdn.cpp  roaring_msisdn_extension.cpp
src/include/: roaring_msisdn_extension.hpp
test/sql/: roaring_msisdn.test
